--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="text-green-400 mb-4">
             <svg class="h-12 w-12 mx-auto" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C8.69 2 6 4.69 6 8C6 11.31 8.69 14 12 14C15.31 14 18 11.31 18 8C18 4.69 15.31 2 12 2zM12 12C9.79 12 8 10.21 8 8C8 5.79 9.79 4 12 4C14.21 4 16 5.79 16 8C16 10.21 14.21 12 12 12zM5 20C5 17.33 8.67 16 12 16C15.33 16 19 17.33 19 20V22H5V20z"></path></svg>
           </div>
-          <h3 class="text-2xl font-bold mb-2">Local Recycling Centers</h3>
+          <a href = "local_recycling_center.html"><h3 class="text-2xl font-bold mb-2">Local Recycling Centers</h3></a>
           <p class="text-gray-400">Find local centers with detailed information.</p>
         </div>
         <!-- Feature 3 -->
@@ -76,7 +76,7 @@
           <div class="text-green-400 mb-4">
             <svg class="h-12 w-12 mx-auto" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C8.69 2 6 4.69 6 8C6 11.31 8.69 14 12 14C15.31 14 18 11.31 18 8C18 4.69 15.31 2 12 2zM12 12C9.79 12 8 10.21 8 8C8 5.79 9.79 4 12 4C14.21 4 16 5.79 16 8C16 10.21 14.21 12 12 12zM5 20C5 17.33 8.67 16 12 16C15.33 16 19 17.33 19 20V22H5V20z"></path></svg>
           </div>
-          <h3 class="text-2xl font-bold mb-2">Gamification</h3>
+          <a href = "gamification.html"><h3 class="text-2xl font-bold mb-2">Gamification</h3></a>
           <p class="text-gray-400">Earn points, unlock badges, and compete to improve recycling habits.</p>
         </div>
       </div>
